update user document after upload images to aws s3
